# OBS-studio-webrtc

plugins/websocket-client/: CMakeLists.txt  WebsocketClient.cpp
